added param badge_title to enable show and hide with show a default

--- a/tests/badge.html
+++ b/tests/badge.html
@@ -9,7 +9,7 @@
     <h1>Codederstats Badge Test</h1>
     <script src="http://0.0.0.0:9393/badge/yaph/achievements"></script>
     <hr>
-    <script src="http://0.0.0.0:9393/badge/yaph/achievements?width=400px&amp;height=100px"></script>
+    <script src="http://0.0.0.0:9393/badge/yaph/achievements?width=400px&amp;height=100px&amp;badge_title=hide"></script>
   </body>
 </html>
 
