added embed function for achievements

--- a/tests/badge.html
+++ b/tests/badge.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Codederstats Badge Test</h1>
-    <script src="http://0.0.0.0:9393/badge/yaph/achievements"></script>
+<script src="http://localhost:9393/badge/madrobby/achievements?width=300px&amp;height=250px&amp;badge_title=show"></script>
     <hr>
     <script src="http://0.0.0.0:9393/badge/yaph/achievements?width=400px&amp;height=100px&amp;badge_title=hide"></script>
   </body>
